<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/alarm_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_screen_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/list_item_name" 
        android:textSize="@dimen/screen_text_size_1"/>
    
    <Button
        android:id="@+id/alarm_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:text="@string/screen_button"
        android:textSize="@dimen/screen_text_size_2" />

    <TextView
        android:id="@+id/alarm_screen_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_screen_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/list_item_time"
        android:textSize="@dimen/screen_text_size_3" />

    <TextView
        android:id="@+id/alarm_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/screen_msg"
        android:textSize="@dimen/screen_text_size_2" />

</RelativeLayout>
