<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <include
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_height"
        android:layout_alignParentTop="true"
        layout="@layout/head_alarm_details" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:hint="@string/details_alarm_name"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/divider_black" />

            <LinearLayout
                android:id="@+id/set_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_list_bg_pressed"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_repeat_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_repeat_choice"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/divider_black" />

            <LinearLayout
                android:id="@+id/set_tone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_list_bg_pressed"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_tone_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_tone_choice"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/divider_black" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>